--- a/debian/control
+++ b/debian/control
@@ -1,6 +1,6 @@
 Source: freeimage
-Maintainer: Deepin Developer <deepin-dev@deepin.org>
-Uploaders: Deepin Packages Builder <packages@deepin.org>
+Maintainer: Debian Science Maintainers <debian-science-maintainers@lists.alioth.debian.org>
+Uploaders: Anton Gladky <gladk@debian.org>,
            Ghislain Antony Vaillant <ghisvail@gmail.com>
 Section: libs
 Priority: optional
@@ -8,23 +8,26 @@ Build-Depends: debhelper-compat (= 13),
                dos2unix,
                libjpeg-dev,
                libjxr-dev,
+               libopenexr-dev,
                libopenjp2-7-dev,
                libpng-dev,
                libraw-dev,
                libtiff-dev,
                libwebp-dev,
                pkg-config,
-               zlib1g-dev,
-	       libilmbase-dev
+               zlib1g-dev
 Build-Depends-Indep: doxygen
-Standards-Version: 4.2.1
-Homepage: http://freeimage.sourceforge.net/
+Standards-Version: 4.6.1
+Vcs-Browser: https://salsa.debian.org/science-team/freeimage
+Vcs-Git: https://salsa.debian.org/science-team/freeimage.git
+Homepage: https://freeimage.sourceforge.net/
 
 Package: libfreeimage-dev
 Architecture: any
 Section: libdevel
 Depends: libfreeimage3 (= ${binary:Version}),
          ${misc:Depends}
+Multi-Arch: same
 Description: Support library for graphics image formats (development files)
  FreeImage is an Open Source C/C++ library project for developers who would
  like to support popular graphics image formats like PNG, BMP, JPEG, TIFF
@@ -53,12 +56,11 @@ Description: Support library for graphics image formats (library)
 Package: libfreeimageplus-dev
 Architecture: any
 Section: libdevel
-Depends: libfreeimage-dev (>= 3.17.0+ds1-1~exp2),
+Depends: libfreeimage-dev,
          libfreeimageplus3 (= ${binary:Version}),
          ${misc:Depends}
 Suggests: libfreeimageplus-doc
-Breaks: libfreeimage-dev (<< 3.17.0+ds1-1~exp2)
-Replaces: libfreeimage-dev (<< 3.17.0+ds1-1~exp2)
+Multi-Arch: same
 Description: C++ wrappers for FreeImage (development files)
  FreeImage is an Open Source C/C++ library project for developers who would
  like to support popular graphics image formats like PNG, BMP, JPEG, TIFF
@@ -74,6 +76,7 @@ Architecture: all
 Section: doc
 Depends: ${misc:Depends},
          libjs-jquery
+Multi-Arch: foreign
 Description: C++ wrappers for FreeImage (documentation)
  FreeImage is an Open Source C/C++ library project for developers who would
  like to support popular graphics image formats like PNG, BMP, JPEG, TIFF
